css/projects.css
.page1 {
  color:#232e5b;
  left: 7%;
  top: 3%;
  margin: auto;
  position: absolute;
  width: 95%;
  height: 700px;
}

.head {
  margin-top: 85px;
}

#info {
  margin: 0;
  margin-bottom: 1%;
}

.projtitle {
  margin-top: 10%;
  font-weight: bold;
  font-size: 15pt;
}

.projtitles {
  margin-top: 4%;
  font-weight: bold;
  font-size: 16pt;
}

.projdesc {
  font-size: 14pt;
  font-weight: lighter;
  margin-top: 25px;
  width: 60%;
  text-align: justify;
}

.links {
  margin-right: 39%;
  text-align: right;
  font-size: 14pt;
  margin-bottom: 55px;
}

.links a {
  text-decoration: none;
  margin-right: 7px;
  border: #232e5b 1px solid;
  border-radius: 3px;
  padding: 5px;
}

.links a:hover {
  border: #c9cad6 1px solid;
  color: #c9cad6;
}

.tablink {
  background-color:white;
  color: #232e5b;
  border: 2px solid #232e5b;
  float: left;
  padding: 10px 12px;
  border-radius: 3px;
  font-size: 15px;
  width: 18%;
  margin-top: 20px;
  margin-right: 30px;
}

.tools {
  text-align: left;
  margin-top: 10px;
  font-size: 10pt;
  margin-bottom: 15px;
}

.tools button {
  text-decoration: none;
  margin-right: 7px;
  border: #232e5b 1px solid;
  border-radius: 3px;
  padding: 7px;
}

